--- a/app/[locale]/css/bborder.css
+++ b/app/[locale]/css/bborder.css
@@ -1,14 +1,12 @@
-
 :root {
   --bborder-width: 1px;
   --bborder-padding-y: 1.4rem;
   --bborder-padding-x: 1.7rem;
-  --bborder-padding-y-sm: 1rem;
-  --bborder-padding-x-sm: .7rem;
+  --bborder-padding-y-sm: 1.3rem;
+  --bborder-padding-x-sm: 1.3rem;
   --bborder-padding-y-lg: 1.6rem;
   --bborder-padding-x-lg: 1.8rem;
 }
-
 
 /*** Custom Document Border   ***/
 
@@ -43,27 +41,23 @@
   overflow: hidden;
 }
 
-
 /* **************   ENVIRONMENT   ********************* */
 
-
-.env{
+.env {
   position: fixed;
-  bottom: calc(var(--bborder-padding-y) );
+  bottom: calc(var(--bborder-padding-y));
   width: 20px;
-  display: flex; 
-  /* display: none;  */
+  display: flex;
   flex-direction: column-reverse;
   padding: 0;
   gap: 130px;
   font-size: 14px;
-  /* border: solid green; */
-  left: calc(var(--bborder-padding-x) / 4)!important;
-  /* bottom: 25px!important; */
-  bottom: calc(var(--bborder-padding-y) )!important;
+  left: calc(var(--bborder-padding-x) / 4) !important;
+  bottom: calc(var(--bborder-padding-y)) !important;
 }
 
-.theme, .language {
+.theme,
+.language {
   margin: 0;
   padding: 0;
   display: flex;
@@ -72,29 +66,26 @@
   transform: rotate(-90deg);
   /* border: solid; */
 }
-.theme span, .language span{
+.theme span,
+.language span {
   display: flex;
   align-items: center;
   gap: 5px;
   cursor: pointer;
 }
 
-.checkbox{
+.checkbox {
   display: flex;
   width: 10px;
   height: 10px;
   border: 1px solid;
   cursor: pointer;
 }
-.checkbox.active{
+.checkbox.active {
   background-color: var(--foreground-color);
 }
 
-
-
-
-@media screen and (min-width: 1200px){
-
+@media screen and (min-width: 1200px) {
   .bborder {
     padding-right: var(--bborder-padding-x-lg);
   }
@@ -109,14 +100,11 @@
 
   .bborder-bottom {
     min-width: calc(100% + var(--bborder-padding-y-lg) + 3px);
-    /* min-height: var(--bborder-padding-y-lg); */
     padding-bottom: var(--bborder-padding-y-lg);
   }
 }
 
-
 @media screen and (max-width: 924px) {
-
   .bborder-top::before {
     position: fixed;
     width: 150px;
@@ -124,10 +112,7 @@
   }
 }
 
-
-
 @media screen and (max-width: 650px) {
-
   .bborder {
     padding-right: var(--bborder-padding-x-sm);
   }
@@ -146,4 +131,9 @@
     padding-bottom: var(--bborder-padding-y-sm);
   }
 
+  .env {
+    left: calc(var(--bborder-padding-x-sm) / 10) !important;
+    left: 0px;
+    bottom: calc(var(--bborder-padding-y-sm)) !important;
+  }
 }
