--- a/app/[locale]/css/navigation.css
+++ b/app/[locale]/css/navigation.css
@@ -13,15 +13,12 @@
   justify-content: space-between;
   align-items: center;
   border-top: 0;
-  /* padding: 0.8rem 2rem; */
   z-index: 999999;
   width: 100%;
   padding-bottom: 4px;
-  /* border-bottom: 1px solid silver; */
 }
 
 .desktop-menu {
-  /* width: 100%; */
   display: flex;
   justify-content: space-between;
 }
@@ -39,42 +36,6 @@
   content: "./ ";
 }
 
-.search-box {
-  width: 100%;
-  position: relative;
-}
-
-.search-input {
-  width: 94%;
-  height: 40px;
-  padding: 0.1rem 1.4rem;
-  border-radius: 10px;
-  box-shadow: 0 0 15px #f5a442aa;
-  font-size: 18px;
-}
-
-.search-input:focus-visible {
-  outline: none;
-}
-
-.search-box label {
-  position: absolute;
-  top: 12px;
-  left: 1.5rem;
-  display: flex;
-  gap: 8px;
-  opacity: 0.5;
-  cursor: auto;
-}
-
-.bi-search {
-  position: absolute;
-  top: 3px;
-}
-
-.search-box span {
-  padding-left: 20px;
-}
 
 .logo {
   display: flex;
@@ -107,9 +68,41 @@
 }
 
 
+.bordered{
+  width: max-content;
+  display: none;
+  position: absolute;
+  top:  32px;
+  right: 0px;
+  background-color: var(--background-color);
+  transition: all cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.bordered.flex{
+  display: flex;
+}
+
+.tb-container{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding: 15px 15px;
+}
+
+.tb-container a{
+  display: flex;
+  /* justify-content: space-between; */
+  width: max-content;
+  gap: 15px;
+}
+
+.context-menu{
+  display: none;
+}
+
+
 
 @media screen and (max-width: 924px) {
-
 
   .main{
     padding-top: 42px;
@@ -117,8 +110,8 @@
 
   .nav-container {
     position: fixed;
-    top: calc(1rem + 4px);
-    width: calc(100% - 51px);
+    top: calc(var(--bborder-padding-y) + var(--bborder-width));
+    width: calc(100% - var(--bborder-padding-x)*2 - var(--bborder-width)*2);
     z-index: 999;
   }
 
@@ -128,7 +121,6 @@
 
   .navbar {
     background-color: var(--background-color);
-    /* border-top: 1px solid var(--foreground-color); */
     border-bottom: 1px solid #ccc;
   }
 
@@ -144,15 +136,10 @@
     align-items: center;
     justify-content: center;
     gap: 7px;
-    /* width: 40px;
-    min-width: 40px; */
     height: 35px;
     border-radius: 7px;
     color: var(--foreground-color);
-    background-color: var(--dark-primary);
-
-    /* position: fixed;
-    right: 35px; */
+    background-color: var(--background-color);
   }
 
   .burger {
@@ -171,54 +158,30 @@
     transform: rotate(45deg) translate(-3px, -3px);
   }
 
-  .mobile-menu {
+  .m-menu-container {
+    width: 100%;
+    /* height: 100%; */
+    /* border: solid green; */
+    margin: 0 auto;
+    padding: 40px 1rem 340px 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
     position: absolute;
     top: 44px;
     left: 0;
     right: 0;
-    width: 100%;
-    height: max-content;
-    margin: 0 auto;
-    padding: 40px 1rem 110px 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
+    background-color: var(--background-color);
     transition: all .7s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   }
 
-  .mobile-menu .navlinks {
+  .m-menu-container .navlinks {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     gap: 4vh;
     width: 100%;
-    padding-left: 40px;
+    padding-left: 20px;
     margin: 0 auto;
-  }
-
-  .mobile-menu .theme {
-    display: flex !important;
-  }
-
-
-  .navlinks ul {
-    width: 100%;
-    position: absolute;
-    top: 30px;
-    left: 0;
-    right: 0;
-    height: 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    border-radius: 0;
-
-    color: var(--background-color);
-    background-color: var(--background-color);
-    padding: 0;
-    gap: 20 px;
-    z-index: -1;
-    transition: all .7s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   }
 
   .navlinks li {
@@ -230,21 +193,46 @@
     width: 100%;
   }
 
-  .m-hire {
-    display: flex;
+  .context-menu{
+    width: max-content;
+    flex-direction: column;
+    gap: 15px;
+
     position: absolute;
-    height: 32px;
-    top: 350px;
-    left: 52px;
-    bottom: 0;
+    top: 400px;
+    left: 40px;
+    width: calc(100% - var(--bborder-padding-x-sm) - 45px );
+  }
+
+  .context-menu .uppercase{
+    font-size: 20px;
+    color: #999;
+  }
+  .context-menu a{
+    width: max-content;
+
+  }
+
+  .context-menu .socials{
+    position: absolute;
+    top: 180px;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+  }
+
+  .context-menu.flex {
+    display: flex;
+  }
+  .context-menu.none{
+    display: none;
   }
 
 
   .footer {
-    flex-direction: column-reverse;
     border-top: 1px solid #ccc;
-    margin-top: 35px;
     gap: 20px;
+    margin-top: 50px;
     padding-top: 20px;
     padding-bottom: 20px;
   }
@@ -253,17 +241,17 @@
 
 @media screen and (max-width: 768px) {
 
-  .navbar{
-    /* padding: .1rem 1rem; */
+}
+
+@media screen and (max-width: 650px) {
+  
+  .nav-container {
+    top: calc(var(--bborder-padding-y-sm) + var(--bborder-width));
+    width: calc(100% - var(--bborder-padding-x-sm)*2 - var(--bborder-width)*2);
   }
 
   .logo h1 {
     font-size: 30px;
-  }
-
-  .nav-container {
-    top: calc(1rem +1px);
-    /* width: calc(100% - 30px); */
   }
 
   .nav-scrolled.nav-container {
@@ -274,27 +262,13 @@
     background-color: var(--background-color);
     /* border-top: 1px solid var(--foreground-color); */
     border-bottom: 1px solid #ccc;
+    height: 40px;
   }
-}
-
-@media screen and (max-width: 650px) {
-  
-  .nav-container {
-    width: calc(100% - 30px);
+  .m-menu-container{
+    top: 40px;
   }
-
-}
-
-@media screen and (max-width: 580px) {
-  .search-input {
-    padding: 0 !important;
-    /* padding-left: 2px!important; */
-  }
-}
-
-@media screen and (max-width: 380px) {
-  .search-box span {
-    display: block;
-    padding: 0;
+  .footer{
+    flex-direction: column;
+    align-items: center;
   }
 }
