--- a/app/[locale]/css/navigation.css
+++ b/app/[locale]/css/navigation.css
@@ -73,8 +73,7 @@
   display: none;
   position: absolute;
   top:  32px;
-  right: 0px;
-  background-color: var(--background-color);
+  right: 2px;
   transition: all cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -85,7 +84,7 @@
 .tb-container{
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 15px;
   padding: 15px 15px;
 }
 
@@ -100,7 +99,14 @@
   display: none;
 }
 
-
+@media screen and (min-width:1000px) {
+  .footer div{
+    width: 250px;
+  }
+  .footer .socials{
+    justify-content: flex-end;
+  }
+}
 
 @media screen and (max-width: 924px) {
 
@@ -160,8 +166,8 @@
 
   .m-menu-container {
     width: 100%;
-    /* height: 100%; */
-    /* border: solid green; */
+    border-top: 1px solid var(--foreground-color);
+    border-bottom: 1px solid var(--foreground-color);
     margin: 0 auto;
     padding: 40px 1rem 340px 1rem;
     display: flex;
@@ -235,6 +241,10 @@
     margin-top: 50px;
     padding-top: 20px;
     padding-bottom: 20px;
+  }
+
+  .footer div{
+    width: max-content;
   }
 }
 
