--- a/app/[locale]/css/sections.css
+++ b/app/[locale]/css/sections.css
@@ -50,7 +50,7 @@ section {
   width: 28%;
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: 14px;
   padding: 10px 15px;
   border: 1px solid var(--foreground-color);
   border-radius: 2px;
@@ -67,7 +67,7 @@ section {
   font-size: 1.2rem;
   font-weight: 500;
   margin-bottom: 2px;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #aaa;
 }
 
 .r-card ul {
@@ -101,15 +101,15 @@ section {
 }
 
 li.purple {
-  color: rgb(129, 8, 129);
+  color: var(--purple);
 }
 
 li.blue {
-  color: blue;
+  color: var(--blue);
 }
 
 li.gray {
-  color: gray;
+  color: var(--gray);
 }
 
 .w-100 {
@@ -233,7 +233,6 @@ li.gray {
   .r-card h4 {
     font-size: 1.1rem;
     margin-bottom: 2px;
-    border-bottom: 1px solid #ccc;
   }
 
   .r-card ul {
