--- a/app/[locale]/css/navigation.css
+++ b/app/[locale]/css/navigation.css
@@ -117,6 +117,7 @@
   .nav-container {
     position: fixed;
     top: calc(var(--bborder-padding-y) + var(--bborder-width));
+    left: calc(var(--bborder-padding-x) + var(--bborder-width));
     width: calc(100% - var(--bborder-padding-x)*2 - var(--bborder-width)*2);
     z-index: 999;
   }
@@ -145,7 +146,7 @@
     height: 35px;
     border-radius: 7px;
     color: var(--foreground-color);
-    background-color: var(--background-color);
+    background-color: transparent;
   }
 
   .burger {
@@ -257,7 +258,8 @@
   
   .nav-container {
     top: calc(var(--bborder-padding-y-sm) + var(--bborder-width));
-    width: calc(100% - var(--bborder-padding-x-sm)*2 - var(--bborder-width)*2);
+    left: calc(1.3rem + 1.5px);
+    width: calc(100% - 35.5px - var(--bborder-width)*2);
   }
 
   .logo h1 {
@@ -275,7 +277,7 @@
     height: 40px;
   }
   .m-menu-container{
-    top: 40px;
+    top: 38px;
   }
   .footer{
     flex-direction: column;
