--- a/app/[locale]/css/navigation.css
+++ b/app/[locale]/css/navigation.css
@@ -85,7 +85,8 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  padding: 15px 15px;
+  padding: 15px;
+  padding-left: 0;
 }
 
 .tb-container a{
