--- a/app/[locale]/css/navigation.css
+++ b/app/[locale]/css/navigation.css
@@ -86,7 +86,7 @@
   flex-direction: column;
   gap: 15px;
   padding: 15px;
-  padding-left: 0;
+  background-color: var(--background-color);
 }
 
 .tb-container a{
