--- a/app/globals.css
+++ b/app/globals.css
@@ -73,6 +73,10 @@ a:hover::after {
   transform: scaleX(1);
 }
 
+.navlinks a::after{
+  /* left: -15px; */
+  /* width: calc(100% + 15px); */
+}
 
 
 /* Scroll Bar ----------------------------------------- */
