--- a/app/[locale]/css/sections.css
+++ b/app/[locale]/css/sections.css
@@ -46,18 +46,6 @@ section {
 
 /* ***** Exceptional ********** */
 
-.theme-switchers {
-  display: flex;
-  justify-content: space-between;
-  gap: 5%;
-  /* height: 150px; */
-}
-.theme-switchers img {
-  width: max-content;
-  height: auto;
-  object-fit: cover;
-}
-
 .responsivity {
   padding: 15px;
   border: 1px solid;
@@ -67,7 +55,6 @@ section {
   border-color: var(--foreground-color);
 }
 .responsivity div {
-  width: 100%;
   height: max-content;
   display: flex;
   justify-content: space-between;
@@ -79,7 +66,7 @@ section {
   height: auto;
 }
 .r-bottom video {
-  width: 32%;
+  width: 32%  ;
   height: auto;
 }
 
@@ -222,7 +209,7 @@ li.gray {
   }
 
   .r-bottom video {
-    width: 31.5%;
+    width: 31.5%  ;
   }
 
   .projects {
@@ -273,8 +260,8 @@ li.gray {
     gap: 10px;
   }
 
-  .r-top video, .r-bottom video {
-    width: 48.5%;
+  .r-top video, .r-bottom video, .carousel-container {
+    width: 48.5%  ;
   }
   .r-bottom {
     height: max-content;
@@ -400,11 +387,12 @@ li.gray {
     gap: 10px;
   }
   .responsivity div {
+    width: 100%;
     gap: 15px;
   }
 
   .r-top video, .r-bottom video {
-    width: 100%;
+    width: 100% ;
   }
   .r-top {
     height: max-content;
