--- a/app/[locale]/css/sections.css
+++ b/app/[locale]/css/sections.css
@@ -184,11 +184,29 @@ li.gray {
 
 .project-img img,
 .project-img video {
+  width: 100%;
   max-width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: left;
   /* display: none; */
+}
+
+.stratos .carousel-container{
+  width: 100%;
+  height: auto;
+}
+.stratos .carousel-container img{
+  width: 100%;
+  height: auto;
+}
+.project-30 .project-img {
+  display: flex;
+  align-items: center;
+}
+
+.r-more{
+  display: none;
 }
 
 @media screen and (min-width: 1200px) {
@@ -225,7 +243,8 @@ li.gray {
   }
 
   .project-30 .project-img {
-    width: max-content;
+    width: 500px;
+    min-width: 500px;
   }
 }
 
@@ -271,7 +290,7 @@ li.gray {
 
   .r-card {
     width: 48%;
-    gap: 2px;
+    gap: 16px;
     padding: 10px 5px;
 
     height: 330px;
@@ -319,6 +338,11 @@ li.gray {
     min-width: 100% !important;
     max-width: 100px !important;
   }
+  .project-img img,
+  .project-img video {
+    /* min-height: 100px;
+    object-fit: cover; */
+  }
 
   .project-img {
     max-width: 100%;
@@ -341,6 +365,23 @@ li.gray {
     max-height: 300px;
   }
 
+  .responsivity {
+    padding: 10px;
+    gap: 10px;
+  }
+  .responsivity div {
+    width: 100%;
+    gap: 15px;
+  }
+
+  .r-top video, .r-bottom video {
+    width: 100% ;
+  }
+  .r-top {
+    height: max-content;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
   .project-30 .project-img {
     max-height: 200px;
     object-fit: cover;
@@ -353,9 +394,34 @@ li.gray {
     gap: 20px;
   }
 
-  .r-card {
+  .tech {
     width: 100%;
     height: 100%;
+  }
+  
+  .skill {
+    width: 100%;
+    height: 340px;
+    overflow-y: hidden;
+    position: relative;
+  }
+  .r-more{
+    display: flex;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 20px;
+    background-color: var(--background-color);
+  }
+  .r-more p{
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+  }
+
+  .skill.is-shown{
+    height: 100%!important;
   }
 
   .tech {
@@ -381,23 +447,6 @@ li.gray {
     min-width: 250px;
     height: 250px;
     max-height: 250px;
-  }
-  .responsivity {
-    padding: 10px;
-    gap: 10px;
-  }
-  .responsivity div {
-    width: 100%;
-    gap: 15px;
-  }
-
-  .r-top video, .r-bottom video {
-    width: 100% ;
-  }
-  .r-top {
-    height: max-content;
-    justify-content: flex-start;
-    flex-wrap: wrap;
   }
 }
 
