--- a/app/[locale]/css/navigation.css
+++ b/app/[locale]/css/navigation.css
@@ -109,6 +109,13 @@
   }
 }
 
+@media screen and (max-width:1100px) {
+  .navlinks{
+    gap: 2rem;
+  }
+}
+
+
 @media screen and (max-width: 924px) {
 
   .main{
