--- a/app/[locale]/css/sections.css
+++ b/app/[locale]/css/sections.css
@@ -76,7 +76,7 @@ section {
   width: 28%;
   display: flex;
   flex-direction: column;
-  gap: 14px;
+  gap: 0px;
   padding: 10px 15px;
   border: 1px solid var(--foreground-color);
   border-radius: 2px;
@@ -130,7 +130,7 @@ li.purple {
   color: var(--purple);
 }
 
-li.blue {
+li.blue, .blue {
   color: var(--blue);
 }
 
@@ -248,6 +248,12 @@ li.gray {
   }
 }
 
+@media screen and (max-width:1100px) {
+  .r-card {
+    width: 31%;
+  }
+}
+
 @media screen and (max-width: 924px) {
   section {
     padding: 1.5rem 2rem;
@@ -289,12 +295,15 @@ li.gray {
   }
 
   .r-card {
-    width: 48%;
-    gap: 16px;
+    width: 31%;
+    gap: 2px;
     padding: 10px 5px;
-
     height: 330px;
     overflow-x: hidden;
+  }
+
+  .tech{
+    height: auto;
   }
 
   .r-card h4 {
@@ -337,11 +346,6 @@ li.gray {
     width: 100%;
     min-width: 100% !important;
     max-width: 100px !important;
-  }
-  .project-img img,
-  .project-img video {
-    /* min-height: 100px;
-    object-fit: cover; */
   }
 
   .project-img {
@@ -399,6 +403,12 @@ li.gray {
     height: 100%;
   }
   
+  .tech h4:nth-of-type(2){
+    padding-top: 24px!important;
+  }
+
+
+
   .skill {
     width: 100%;
     height: 340px;
@@ -411,7 +421,7 @@ li.gray {
     left: 0px;
     bottom: 0px;
     width: 100%;
-    height: 20px;
+    height: 25px;
     background-color: var(--background-color);
   }
   .r-more p{
@@ -422,10 +432,6 @@ li.gray {
 
   .skill.is-shown{
     height: 100%!important;
-  }
-
-  .tech {
-    height: auto;
   }
 
   .description {
